// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render form is closed 1`] = `
"<div className=\\"feedback-container\\">
  <Transition in={false} timeout={500} mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true} onEnter={[Function: noop]} onEntering={[Function: noop]} onEntered={[Function: noop]} onExit={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
    [function]
  </Transition>
  <Modal open={false} onClose={[Function: Function]} size=\\"small\\" className=\\"feedback-modal-container\\" centered={true} dimmer={true} closeOnDimmerClick={true} closeOnDocumentClick={false} eventPool=\\"Modal\\">
    <Header icon=\\"mail\\" content=\\"Get Involved with Search NEU!\\" />
    <ModalContent className=\\"formModalContent\\">
      <Form as=\\"form\\">
        <div className=\\"feedbackParagraph\\">
          Thanks for your interest! We&#39;d love to have more people help out with the project. We are looking for people for both introductory level roles and leadership roles. There&#39;s a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don&#39;t have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook URL, email, Fortnite username, etc) and someone will reach out!
        </div>
        <TextArea name=\\"response\\" form=\\"feedbackForm\\" className=\\"feedbackTextbox\\" onChange={[Function: bound onTextAreaChange]} as=\\"textarea\\" rows={3} />
      </Form>
    </ModalContent>
    <ModalActions>
      <Button basic={true} color=\\"red\\" onClick={[Function: Function]} as=\\"button\\">
        <Icon name=\\"remove\\" as=\\"i\\" />
        Cancel
      </Button>
      <Button type=\\"submit\\" color=\\"green\\" form=\\"feedbackForm\\" onClick={[Function: bound onSubmit]} as=\\"button\\">
        <Icon name=\\"checkmark\\" as=\\"i\\" />
        Submit
      </Button>
    </ModalActions>
  </Modal>
</div>"
`;

exports[`should render the form 1`] = `
"<div className=\\"feedback-container\\">
  <Transition in={false} timeout={500} mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true} onEnter={[Function: noop]} onEntering={[Function: noop]} onEntered={[Function: noop]} onExit={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
    [function]
  </Transition>
  <Modal open={true} onClose={[Function: Function]} size=\\"small\\" className=\\"feedback-modal-container\\" centered={true} dimmer={true} closeOnDimmerClick={true} closeOnDocumentClick={false} eventPool=\\"Modal\\">
    <Header icon=\\"mail\\" content=\\"Get Involved with Search NEU!\\" />
    <ModalContent className=\\"formModalContent\\">
      <Form as=\\"form\\">
        <div className=\\"feedbackParagraph\\">
          Thanks for your interest! We&#39;d love to have more people help out with the project. We are looking for people for both introductory level roles and leadership roles. There&#39;s a lot of CS stuff (new features, etc) and non-CS stuff (posters, marketing, outreach, etc) that we could work on, so it is no problem at all if you don&#39;t have a lot of experience in CS! Everything is flexible, and we could help you learn some programming along the way if you want to work on the site 🙂. Leave your name and some way we can get in contact (Facebook URL, email, Fortnite username, etc) and someone will reach out!
        </div>
        <TextArea name=\\"response\\" form=\\"feedbackForm\\" className=\\"feedbackTextbox\\" onChange={[Function: bound onTextAreaChange]} as=\\"textarea\\" rows={3} />
      </Form>
    </ModalContent>
    <ModalActions>
      <Button basic={true} color=\\"red\\" onClick={[Function: Function]} as=\\"button\\">
        <Icon name=\\"remove\\" as=\\"i\\" />
        Cancel
      </Button>
      <Button type=\\"submit\\" color=\\"green\\" form=\\"feedbackForm\\" onClick={[Function: bound onSubmit]} as=\\"button\\">
        <Icon name=\\"checkmark\\" as=\\"i\\" />
        Submit
      </Button>
    </ModalActions>
  </Modal>
</div>"
`;
